--- a/ANDROID/project/app/src/main/res/layout/activity_main.xml
+++ b/ANDROID/project/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:id="@+id/fragment_container"
