--- a/ANDROID/project/app/src/main/res/layout/activity_aggregates.xml
+++ b/ANDROID/project/app/src/main/res/layout/activity_aggregates.xml
@@ -6,16 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".AggregatesActivity">
 
-    <TextView
-        android:id="@+id/request_response"
+    <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/graph_histogram" />
+
 </android.support.constraint.ConstraintLayout>
