--- a/ANDROID/project/app/src/main/res/layout/fragment_aggregates.xml
+++ b/ANDROID/project/app/src/main/res/layout/fragment_aggregates.xml
@@ -131,20 +131,30 @@
         android:layout_height="wrap_content"
         android:hint="Default 10"
         android:tooltipText="Histogram Bins"
-        app:layout_constraintBottom_toBottomOf="@id/fetch_button"
+        app:layout_constraintBottom_toBottomOf="@id/aggregates_button"
         app:layout_constraintEnd_toEndOf="@id/aggregates_desc"
         app:layout_constraintStart_toStartOf="@id/aggregates_desc"
         app:layout_constraintTop_toBottomOf="@id/kpi_input" />
 
     <Button
-        android:id="@+id/fetch_button"
+        android:id="@+id/aggregates_button"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:text="Fetch Data"
+        android:text="Display Aggregates"
         app:layout_constraintBottom_toBottomOf="@id/aggregates_footer"
-        app:layout_constraintEnd_toStartOf="@id/fill_button"
+        app:layout_constraintEnd_toStartOf="@id/histogram_button"
         app:layout_constraintStart_toStartOf="@id/bins_input"
         app:layout_constraintTop_toBottomOf="@id/bins_input" />
+
+    <Button
+        android:id="@+id/histogram_button"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:text="Display histogram"
+        app:layout_constraintBottom_toBottomOf="@id/aggregates_button"
+        app:layout_constraintEnd_toStartOf="@id/fill_button"
+        app:layout_constraintStart_toEndOf="@id/aggregates_button"
+        app:layout_constraintTop_toTopOf="@id/aggregates_button" />
 
     <Button
         android:id="@+id/fill_button"
@@ -153,7 +163,7 @@
         android:text="Auto Fill"
         app:layout_constraintBottom_toBottomOf="@id/aggregates_footer"
         app:layout_constraintEnd_toEndOf="@id/bins_input"
-        app:layout_constraintStart_toEndOf="@id/fetch_button"
+        app:layout_constraintStart_toEndOf="@id/histogram_button"
         app:layout_constraintTop_toBottomOf="@id/bins_input" />
 
     <TextView
@@ -165,7 +175,7 @@
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/fill_button"
-        app:layout_constraintStart_toStartOf="@id/fetch_button"
-        app:layout_constraintTop_toBottomOf="@id/fetch_button" />
+        app:layout_constraintStart_toStartOf="@id/aggregates_button"
+        app:layout_constraintTop_toBottomOf="@id/aggregates_button" />
 
 </android.support.constraint.ConstraintLayout>
