--- a/ANDROID/project/app/src/main/res/layout/fragment_outliers.xml
+++ b/ANDROID/project/app/src/main/res/layout/fragment_outliers.xml
@@ -111,7 +111,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:tooltipText="KPI Basename*"
-        app:layout_constraintBottom_toTopOf="@id/bins_input"
+        app:layout_constraintBottom_toTopOf="@id/threshold_input"
         app:layout_constraintEnd_toEndOf="@id/aggregates_desc"
         app:layout_constraintStart_toStartOf="@id/aggregates_desc"
         app:layout_constraintTop_toBottomOf="@id/acronym_input" />
@@ -119,18 +119,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bins:"
-        app:layout_constraintBottom_toBottomOf="@+id/bins_input"
-        app:layout_constraintEnd_toStartOf="@id/bins_input"
+        android:text="Threshold:"
+        app:layout_constraintBottom_toBottomOf="@+id/threshold_input"
+        app:layout_constraintEnd_toStartOf="@id/threshold_input"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/bins_input" />
+        app:layout_constraintTop_toTopOf="@id/threshold_input" />
 
     <EditText
-        android:id="@+id/bins_input"
+        android:id="@+id/threshold_input"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:hint="Default 10"
-        android:tooltipText="Histogram Bins"
+        android:hint="Default 3.5"
+        android:tooltipText="Threshold"
         app:layout_constraintBottom_toBottomOf="@id/fetch_button"
         app:layout_constraintEnd_toEndOf="@id/aggregates_desc"
         app:layout_constraintStart_toStartOf="@id/aggregates_desc"
@@ -143,8 +143,8 @@
         android:text="Fetch Data"
         app:layout_constraintBottom_toBottomOf="@id/aggregates_footer"
         app:layout_constraintEnd_toStartOf="@id/fill_button"
-        app:layout_constraintStart_toStartOf="@id/bins_input"
-        app:layout_constraintTop_toBottomOf="@id/bins_input" />
+        app:layout_constraintStart_toStartOf="@id/threshold_input"
+        app:layout_constraintTop_toBottomOf="@id/threshold_input" />
 
     <Button
         android:id="@+id/fill_button"
@@ -152,9 +152,9 @@
         android:layout_height="wrap_content"
         android:text="Auto Fill"
         app:layout_constraintBottom_toBottomOf="@id/aggregates_footer"
-        app:layout_constraintEnd_toEndOf="@id/bins_input"
+        app:layout_constraintEnd_toEndOf="@id/threshold_input"
         app:layout_constraintStart_toEndOf="@id/fetch_button"
-        app:layout_constraintTop_toBottomOf="@id/bins_input" />
+        app:layout_constraintTop_toBottomOf="@id/threshold_input" />
 
     <TextView
         android:id="@+id/aggregates_footer"
